--- a/css/projetos.css
+++ b/css/projetos.css
@@ -7,6 +7,11 @@
 }
 
 .projetos-container {
+   background-color: #F0F0F0;
+  max-width: 1200px;
+  height: 600px;
+  padding: 120 px 20px 60px 20px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
