--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -164,7 +164,27 @@
   top: -200px;
 }
 
+@media (max-width: 1000px) {
+   .experiencia-titulo1::before {
+    content: initial;
+   }
+
+   .experiencia-titulo2::before {
+    content: initial;
+   }
+}
+
 @media (max-width: 800px) {
+  .idiomas li::before {
+  height: 100px;
+  top: -150px;
+}
+  .cursos-intensivos h3, .idiomas h3 {
+    font-size: 0.8rem;
+  }
+  .cursos-intensivos li, .idiomas li {
+    font-size: 0.7rem;
+  }
   .experiencia-titulo2::before {
     content: initial;
   }
@@ -185,13 +205,22 @@
     align-items: center;
   }
   .formacao-extra .cursos-intensivos ul li {
-    justify-content: start;
+    justify-content: space-between;
   }
   .formacao-extra .cursos-intensivos ul li span {
-    margin-left: 50px;
+    margin-right: 100px;
+  }
+  .experiencia-titulo1 {
+    margin-top: 50px;
+  }
+  .experiencia-titulo2 {
+    margin-top: 50px;
   }
 }
 @media (max-width: 600px) {
+  .cursos-intensivos h3, .idiomas h3 {
+    padding: 0;
+  }
   .experiencia-container {
     grid-template-columns: 1fr;
   }
@@ -221,20 +250,48 @@
     margin-left: 0;
     justify-content: center;
   }
+  .formacao-extra .cursos-intensivos ul li span {
+    padding-left: 20px;
+  }
   .formacao-extra {
-    margin-left: 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .cursos-intensivos ul li {
+    width: 100%;
+  }
+  .cursos-intensivos ul {
+    margin: 0;
+    padding: 0;
+    width: 300px;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  span {
+    display: none;
+  }
+  .cursos-intensivos ul li, .idiomas ul li{
+    margin: 0;
+    padding: 0;
+  }
+  .idiomas  {
+    margin: 0;
+    padding: 0;
   }
   .idiomas li::before {
     content: initial;
   }
   .formacao-extra h3::before {
-    left: -40px;
-    top: -5px;
+    content: initial;
   }
   .formacao-extra h3 {
-    font-size: .8rem;
+    font-size: 1rem;
     padding-bottom: 10px;
-    margin-left: 40px;
   }
   .formacao-extra li {
     margin-left: 40px;
@@ -244,5 +301,8 @@
 @media (max-width: 500px) {
   .formacao-extra li {
     font-size: 0.7rem;
+  }
+  .idiomas {
+    margin-top: 50px;
   }
 }
